2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add do-while for `GETC_'; rename to `GET'.

	* rcsbase.h (GETCeof_): Delete unused macro.
	(GETC): Rename from `GETC_'; add do-while.
	* rcsedit.c (copystring): Use `GETC'.
	(enterstring, editstring, expandline): Likewise.
	* rcslex.c (nextlex, getphrases, readstring, savestring): Likewise.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Mark some parameters RCS_UNUSED.

	* rcsfnms.c (rcsreadopen): Mark `mustread' RCS_UNUSED.
	* rcslex.c (nothing_to_deallocate): Likewise for `f'.
	* rcsutil.c (catchsigaction): Likewise for `c'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add check for GCC attribute `unused'.

	* rcsbase.h (RCS_UNUSED): New #define.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Declare `display_version' for rcsutil.c.

	* rcsutil.c: #include "gnu-h-v.h".

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move all DIFF* config to configure.in; assume diffutils.

	* Makefile.in (DIFF, DIFF3): Delete vars.
	(RCSTEST): Remove DIFF='$(DIFF)'.
	(bother.h): Don't output #define:s for `DIFF', `DIFF3'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Require absolute filenames for external programs.

	* Makefile.in (absp): Delete var.
	(bother.h): Use absolute $(RCSPREFIX), via pwd(1);
	don't bother computing `ALL_ABSOLUTE', `DIFF_ABSOLUTE'.
	* rcsutil.c (exec_RCS): Move #define out of conditional.
	(set_uid_to): Update #if condition, taking DIFF_ABSOLUTE as 1.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move non-filename DIFF* configuration to configure.in.

	* merger.c: Don't #include "bother.h".
	* rcsdiff.c: Likewise.
	* Makefile.in (DIFF3_BIN, DIFFFLAGS, DIFF_L)
	(DIFF_FAILURE, DIFF_SUCCESS, DIFF_TROUBLE): Delete vars.
	(merger$o, rcsdiff$o): No longer depend on "bother.h".
	(bother.h): Remove #define generation for `DIFF_L', `DIFF3_BIN',
	`DIFFFLAGS', `DIFF_SUCCESS', `DIFF_FAILURE', `DIFF_TROUBLE'.
